# blank-tauri-app

./: README.md  package.json  pnpm-lock.yaml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  tauri_traffic_light_positioner_plugin.rs
src-tauri/src/plugins/: tauri_traffic_light_positioner_plugin.rs
src/components/: PrivyetMir.tsx  WindowTitlebar.tsx
src/layouts/: DefaultLayout.tsx
src/pages/: HomePage.tsx
src/pages/HomePage/: index.tsx
src/pages/SettingsPage/: index.tsx
